Updated JPA entity in accordance to review